[gd_scene load_steps=29 format=3 uid="uid://ddyetxupeiaq7"]

[ext_resource type="Script" path="res://ui/Elements/SliderMiniGame/AnimatedTextureRect.gd" id="1_4geq0"]
[ext_resource type="Script" path="res://ui/Elements/SliderMiniGame/SliderMiniGame.gd" id="1_sme4g"]
[ext_resource type="Texture2D" uid="uid://dmhaahis1lepm" path="res://ui/Elements/SliderMiniGame/pointer_slider_minigame.png" id="2_qhsy2"]
[ext_resource type="Texture2D" uid="uid://dsk7j0bnf0dxx" path="res://ui/Elements/SliderMiniGame/hit_full_forge_feedback.png" id="3_jtimx"]
[ext_resource type="Shader" path="res://ui/Elements/SliderMiniGame/SliderMiniGame.gdshader" id="4_cd3la"]
[ext_resource type="Texture2D" uid="uid://bqa8a7posq2to" path="res://ui/Images/btn_A_sprite.png" id="5_komsu"]
[ext_resource type="Texture2D" uid="uid://dyp3d16xuu1x7" path="res://ui/Images/btn_E_sprite.png" id="6_2o1wi"]
[ext_resource type="Texture2D" uid="uid://cnqxblroivaex" path="res://ui/Elements/SliderMiniGame/Forging_2.png" id="7_atq5m"]
[ext_resource type="Texture2D" uid="uid://c0qovqc15y1m0" path="res://ui/Elements/SliderMiniGame/frame_forge_feedback.png" id="8_5fqvp"]
[ext_resource type="Texture2D" uid="uid://odwrutk6fm4p" path="res://ui/Elements/SliderMiniGame/Forging_1.png" id="8_xy438"]
[ext_resource type="Texture2D" uid="uid://bex01u7lm3txr" path="res://ui/Images/glow_particle.png" id="11_yxaf7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ntiyy"]
shader = ExtResource("4_cd3la")
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/width = 20.0
shader_parameter/pattern = 2
shader_parameter/inside = false
shader_parameter/add_margins = true
shader_parameter/should_apply = true

[sub_resource type="Gradient" id="Gradient_67jkp"]
interpolation_mode = 1
interpolation_color_space = 1
offsets = PackedFloat32Array(0, 0.49, 0.79)
colors = PackedColorArray(0.406139, 0.0142236, 9.62615e-08, 1, 0, 1, 0, 1, 0.407843, 0.0156863, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_37s4r"]
gradient = SubResource("Gradient_67jkp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cgxoh"]
content_margin_top = 25.0
content_margin_bottom = 10.0
texture = SubResource("GradientTexture1D_37s4r")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_4ga66"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_wvnn7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_klp4c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_atq5m")
}, {
"duration": 1.0,
"texture": ExtResource("8_xy438")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_u2uy3"]
atlas = ExtResource("6_2o1wi")
region = Rect2(0, 0, 74, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxr3l"]
atlas = ExtResource("5_komsu")
region = Rect2(0, 0, 75, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8cfd"]
atlas = ExtResource("5_komsu")
region = Rect2(75, 0, 75, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pfr2"]
atlas = ExtResource("6_2o1wi")
region = Rect2(74, 0, 74, 74)

[sub_resource type="SpriteFrames" id="SpriteFrames_308ff"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxr3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8cfd")
}],
"loop": true,
"name": &"controller",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2uy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pfr2")
}],
"loop": true,
"name": &"keyboard",
"speed": 2.0
}]

[sub_resource type="Gradient" id="Gradient_4uc57"]
offsets = PackedFloat32Array(0, 0.484931, 0.589041, 0.953425, 0.99726)
colors = PackedColorArray(4, 1.21569, 0.227451, 1, 0.882353, 0.32549, 0.0235294, 1, 4, 0, 0, 1, 4, 0, 0, 1, 4, 0, 0, 0.501961)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_lt77p"]
gradient = SubResource("Gradient_4uc57")

[sub_resource type="Curve" id="Curve_owxtq"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.0219779), 0.568742, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_6a5ds"]
curve = SubResource("Curve_owxtq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_q6q2a"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
initial_velocity_min = 600.0
initial_velocity_max = 600.0
gravity = Vector3(0, 800, 0)
scale_min = 0.05
scale_max = 0.2
scale_curve = SubResource("CurveTexture_6a5ds")
color_ramp = SubResource("GradientTexture1D_lt77p")

[node name="SliderMiniGame" type="Control" node_paths=PackedStringArray("markers")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sme4g")
empty_marker = ExtResource("8_5fqvp")
filled_marker = ExtResource("3_jtimx")
markers = [NodePath("Panel/Items/Item1"), NodePath("Panel/Items/Item2"), NodePath("Panel/Items/Item3")]

[node name="Panel" type="Panel" parent="."]
material = SubResource("ShaderMaterial_ntiyy")
layout_mode = 0
offset_left = 800.0
offset_right = 1426.0
offset_bottom = 877.0

[node name="HSlider" type="HSlider" parent="Panel"]
z_index = 1
layout_mode = 0
offset_left = 28.0
offset_top = 650.0
offset_right = 603.0
offset_bottom = 739.0
mouse_filter = 2
theme_override_icons/grabber_disabled = ExtResource("2_qhsy2")
theme_override_styles/slider = SubResource("StyleBoxTexture_cgxoh")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_4ga66")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_wvnn7")
value = 50.0
editable = false
scrollable = false

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 6.0
offset_top = 11.0
offset_right = 620.0
offset_bottom = 873.0
texture = ExtResource("8_xy438")
expand_mode = 1
stretch_mode = 6
script = ExtResource("1_4geq0")
sprites = SubResource("SpriteFrames_klp4c")
frame_index = 1

[node name="ActionBtn" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 263.0
offset_top = 523.0
offset_right = 362.0
offset_bottom = 618.0
texture = SubResource("AtlasTexture_u2uy3")
expand_mode = 1
stretch_mode = 6
script = ExtResource("1_4geq0")
sprites = SubResource("SpriteFrames_308ff")
current_animation = "keyboard"

[node name="PressCD" type="Timer" parent="Panel"]
wait_time = 0.5
one_shot = true

[node name="Items" type="GridContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -247.0
offset_top = -106.0
offset_right = 1741.0
offset_bottom = 694.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.25, 0.083)
theme_override_constants/h_separation = 500
columns = 3

[node name="Item1" type="TextureRect" parent="Panel/Items"]
custom_minimum_size = Vector2(280, 800)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("8_5fqvp")
expand_mode = 5

[node name="Item2" type="TextureRect" parent="Panel/Items"]
custom_minimum_size = Vector2(280, 800)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("8_5fqvp")
expand_mode = 5

[node name="Item3" type="TextureRect" parent="Panel/Items"]
custom_minimum_size = Vector2(280, 800)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("8_5fqvp")
expand_mode = 5

[node name="Explosion" type="GPUParticles2D" parent="Panel"]
light_mask = 3
visibility_layer = 3
z_index = 6
position = Vector2(155, 599)
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_q6q2a")
texture = ExtResource("11_yxaf7")
one_shot = true
explosiveness = 1.0

[connection signal="timeout" from="Panel/PressCD" to="." method="_on_press_cd_timeout"]
